--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URL='mongodb+srv://MidziRibery:dn8Az7MLeN2bcx0X@cluster0.sabelbb.mongodb.net/?retryWrites=true&w=majority'
+JWT_SECRET='somesuperhardstring'
 PORT=3001
