--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGO_URL='mongodb+srv://MidziRibery:dn8Az7MLeN2bcx0X@cluster0.sabelbb.mongodb.net/?retryWrites=true&w=majority'
+MONGO_URL='mongodb+srv://MidziRibery:FCgXdXj7Dzcpg7R6@cluster0.sabelbb.mongodb.net/?retryWrites=true&w=majority'
 JWT_SECRET='somesuperhardstring'
-PORT=3001
+PORT=3002
